# traffic-monitoring-app

./: .envrc  .gitignore  README.md  secrets.envrc.template
.github/workflows/: auto-approve.yml  detector-build-publish-detector-state-init.yml  detector-build-publish-detector.yml  detector-tests.yml  github-actions.yml  state-init-tests.yml
.github/workflows/detector/: detector-build-publish.yml  detector-tests.yml
deployments/: start-k3d.sh
deployments/local/: helmfile.yaml  storage_class.yaml
detector/: Dockerfile  README.md  pyproject.toml
detector/detector/: main.py
detector/tests/: test_main.py
helm/charts/: Chart.yaml  values.yaml
helm/charts/templates/: _helpers.tpl  detector.yaml  secret-registry.yaml  state-init.yaml
neural-network/: README.md  pyproject.toml
neural-network/neural_network/: main.py
neural-network/neural_network/cnn_network/: neural_network.py
neural-network/neural_network/entities/: flow.py
neural-network/tests/: test_main.py
state-init/: Dockerfile  README.md  pyproject.toml
state-init/resources/: company-configuration.sh  index-mappings.json
state-init/state_init/: main.py
state-init/state_init/opensearch/: opensearch_service.py
state-init/tests/: test_main.py
