[tool.poetry]
name = "state_init"
version = "0.0.1"
description = "State Init to configure and populate Opensearch & Opensearch Dashboards"
authors = ["Daniel Merino Cano <dmerinocano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
opensearch-py = "3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
flake8 = "^6.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
